--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,6 +22,10 @@
             <input type="password" name="password" id="password" class="form-control" required />
         </div>
         <div class="form-group">
+            <label for="secretword">Secret Word</label>
+            <input type="password" name="secretword" id="secretword" class="form-control" required />
+        </div>
+        <div class="form-group">
             <button type="submit" class="btn btn-primary">Register</button>
             <a href="/login" class="btn btn-link">Cancel</a>
         </div>
