--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 <div class="form-container">
     <h2>Register</h2>
-    <% if(locals.error) { %>
+    <% if (locals.error) { %>
         <div class="alert alert-danger"><%= error %></div>
     <% } %>
     <form method="post">
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <label for="secretword">Secret Word</label>
-            <input type="password" name="secretword" id="secretword" class="form-control" required />
+            <input type="text" name="secretword" id="secretword" class="form-control" required />
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Register</button>
